<resources>
    <string name="app_name">YandexMedia</string>
    <string name="player_notification_title">Playlist Maker</string>
    <string name="player_notification_channel">Воспроизведение музыки</string>

    <!-- Главный экран -->
    <string name="title_playlist_maker">Playlist maker</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_library">Медиатека</string>
    <string name="menu_settings">Настройки</string>

    <!-- Экраны -->
    <string name="title_media">Медиатека</string>

    <!-- Вкладки -->
    <string name="tab_favorites">Избранные треки</string>
    <string name="tab_playlists">Плейлисты</string>

    <!-- Состояния -->
    <string name="empty_library_message">Ваша медиатека пуста</string>

    <!-- Экран поиска -->
    <string name="title_search">Поиск</string>
    <string name="hint_search">Поиск</string>
    <string name="clear_search">Очистить поиск</string>

    <!-- Экран настроек -->
    <string name="content_back">Назад</string>
    <string name="title_settings">Настройки</string>
    <string name="label_dark_theme">Темная тема</string>
    <string name="label_share_app">Поделиться приложением</string>
    <string name="label_support">Написать в поддержку</string>
    <string name="label_user_agreement">Пользовательское соглашение</string>

    <string name="share_via">Поделиться через</string>
    <string name="course_link">https://practicum.yandex.ru/android-developer/</string>

    <string name="email_to">developer@yandexmedia.app</string>
    <string name="email_subject">Обратная связь по приложению YandexMedia</string>
    <string name="email_body">Здравствуйте! Хочу поделиться отзывом о приложении...</string>
    <string name="email_chooser_title">Выберите почтовый клиент</string>
    <string name="no_email_client">На устройстве не найдено почтовых приложений</string>


    <string name="offer_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="content_album_art">Обложка альбома</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="network_error">Проблемы со связью</string>
    <string name="network_error2">Загрузка не удалась. Проверьте подключение к интернету </string>
    <string name="update">Обновить</string>
    <string name="history">Вы искали</string>
    <string name="back">Назад</string>
    <string name="cover">cover</string>
    <string name="add_to_playlist">Добавить музыку</string>
    <string name="play">Играть</string>
    <string name="favorite">Избранное</string>
    <string name="length">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="clear_history">Очистить историю</string>

    <string name="share_message">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_chooser_title">Поделиться через</string>
    <string name="support_email">support@yourapp.com</string>
    <string name="support_subject">Сообщение разработчикам</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>

    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="no_email_app">На устройстве нет почтового клиента</string>
    <string name="no_browser_app">На устройстве нет браузера</string>
    <string name="share_error">Не удалось открыть приложения для шаринга</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_playlists_message">Вы не создали\n ни одного плейлиста</string>
    <string name="playlist_tracks_count">%1$d треков</string>
    <string name="title_player">Аудиоплеер</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>


</resources>
