<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_back_ground"
    android:paddingTop="8dp">

    <!-- Toolbar -->
    <LinearLayout style="@style/SettingsToolbar">
        <ImageView
            android:id="@+id/backButton"
            style="@style/SettingsBackIcon"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/content_back" />

        <TextView
            android:fontFamily="@font/ys_display_medium"
            style="@style/SettingsTitleText"
            android:text="@string/title_settings" />
    </LinearLayout>

    <!-- Темная тема -->
    <LinearLayout
        style="@style/SettingsItem"
        android:clickable="false"
        android:focusable="false">
        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_dark_theme" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <!-- Поделиться -->
    <LinearLayout
        android:id="@+id/shareApp"
        style="@style/SettingsItem">
        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_share_app" />
        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_send" />
    </LinearLayout>

    <!-- Поддержка -->
    <LinearLayout
        android:id="@+id/support"
        style="@style/SettingsItem">
        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_support" />
        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_help" />
    </LinearLayout>

    <!-- Пользовательское соглашение -->
    <LinearLayout
        android:id="@+id/userAgreement"
        style="@style/SettingsItem">
        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_user_agreement" />
        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

</LinearLayout>
