<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/mediaLibraryFragment">

    <fragment
        android:id="@+id/mediaLibraryFragment"
        android:name="com.example.yandexmedia.presentation.ui.media.MediaLibraryFragment"
        android:label="@string/title_media" />

    <action
        android:id="@+id/action_mediaLibraryFragment_to_playerFragment"
        app:destination="@id/playerFragment" />

    <action
        android:id="@+id/action_mediaLibraryFragment_to_createPlaylistFragment"
        app:destination="@id/createPlaylistFragment" />

    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.yandexmedia.presentation.ui.search.SearchFragment"
        android:label="@string/title_search">

        <action
            android:id="@+id/action_searchFragment_to_playerFragment"
            app:destination="@id/playerFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.yandexmedia.presentation.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

    <fragment
        android:id="@+id/playerFragment"
        android:name="com.example.yandexmedia.presentation.ui.player.PlayerFragment"
        android:label="@string/title_player">

        <argument
            android:name="track"
            app:argType="com.example.yandexmedia.domain.model.Track" />
    </fragment>

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.yandexmedia.presentation.ui.media.playlists.CreatePlaylistFragment"
        android:label="@string/new_playlist" />

    <fragment
        android:id="@+id/playlistFragment"
        android:name="com.example.yandexmedia.presentation.ui.media.playlists.PlaylistFragment"
        android:label="Плейлист">

        <argument
            android:name="playlistId"
            app:argType="long" />
    </fragment>

</navigation>