<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_back_ground"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:id="@+id/titleSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/title_settings"
        android:textColor="@color/color_black"
        android:textSize="24sp" />

    <LinearLayout
        style="@style/SettingsItem"
        android:clickable="false"
        android:focusable="false">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shareApp"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_share_app" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_send" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_support" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/userAgreement"
        style="@style/SettingsItem">

        <TextView
            style="@style/SettingsItemText"
            android:text="@string/label_user_agreement" />

        <ImageView
            style="@style/SettingsItemIcon"
            android:src="@drawable/ic_arrow_right" />
    </LinearLayout>

</LinearLayout>