<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:padding="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coverImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/cover"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/backButton"
            app:shapeAppearanceOverlay="@style/RoundedImage"
            tools:src="@drawable/placeholder_player" />

        <TextView
            android:id="@+id/trackName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="10dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coverImage"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/ys_display_medium"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trackName"
            tools:text="The Beatles" />

        <ImageButton
            android:id="@+id/addToPlaylistButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/add_to_playlist"
            android:scaleType="centerCrop"
            android:src="@drawable/check"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artistName" />

        <com.example.yandexmedia.presentation.ui.player.PlaybackButtonView
            android:id="@+id/playButton"
            android:layout_width="85dp"
            android:layout_height="85dp"
            android:background="@drawable/round_button_play"
            android:contentDescription="@string/play"
            app:layout_constraintBottom_toBottomOf="@id/addToPlaylistButton"
            app:layout_constraintEnd_toStartOf="@id/favoriteButton"
            app:layout_constraintStart_toEndOf="@id/addToPlaylistButton"
            app:layout_constraintTop_toTopOf="@id/addToPlaylistButton"
            app:pauseImage="@drawable/stop"
            app:playImage="@drawable/play" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/round_button"
            android:contentDescription="@string/favorite"
            android:scaleType="centerCrop"
            android:src="@drawable/favorite"
            app:layout_constraintBottom_toBottomOf="@id/addToPlaylistButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/addToPlaylistButton" />

        <TextView
            android:id="@+id/playbackPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            tools:text="0:30" />

        <TextView
            android:id="@+id/lengthLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/length"
            android:textColor="@color/color_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/playbackPosition" />

        <TextView
            android:id="@+id/lengthValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintBaseline_toBaselineOf="@id/lengthLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="5:35" />

        <TextView
            android:id="@+id/albumLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/album"
            android:textColor="@color/color_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lengthLabel" />

        <TextView
            android:id="@+id/albumValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintBaseline_toBaselineOf="@id/albumLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/albumLabel"
            tools:text="Yesterday (Remastered 2009)" />

        <TextView
            android:id="@+id/yearLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/year"
            android:textColor="@color/color_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/albumLabel" />

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintBaseline_toBaselineOf="@id/yearLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="1965" />

        <TextView
            android:id="@+id/genreLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/genre"
            android:textColor="@color/color_playlist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/yearLabel" />

        <TextView
            android:id="@+id/genreValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintBaseline_toBaselineOf="@id/genreLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Rock" />

        <TextView
            android:id="@+id/countryLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/country"
            android:textColor="@color/color_playlist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/genreLabel" />

        <TextView
            android:id="@+id/countryValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/countryLabel"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Великобритания" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>